--- a/EUMProdTool/WebContent/WEB-INF/web.xml
+++ b/EUMProdTool/WebContent/WEB-INF/web.xml
@@ -20,6 +20,10 @@
     <servlet-name>ManageServlet</servlet-name>
     <servlet-class>com.project.eum.prodtool.servlet.ManageServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>ChangePasswordServlet</servlet-name>
+    <servlet-class>com.project.eum.prodtool.servlet.ChangePasswordServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
@@ -35,6 +39,10 @@
   <servlet-mapping>
     <servlet-name>ManageServlet</servlet-name>
     <url-pattern>/manage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ChangePasswordServlet</servlet-name>
+    <url-pattern>/changepassword</url-pattern>
   </servlet-mapping>
   <session-config>
     <session-timeout>15</session-timeout>
